# playground

./: .gitignore  .gitmodules  CMakeLists.txt  Code Playground.sln
AsyncTcpClient/: Form1.Designer.vb  Form1.vb
AsyncTcpServer/: Form1.Designer.vb  Form1.vb
Boost Asio Http Server/: Boost Asio Http Server.vcxproj  Boost Asio Http Server.vcxproj.filters  connection.cpp  connection.hpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  reply.cpp  request.hpp  request_handler.cpp  request_parser.hpp  server.cpp  server.hpp
Boost Async TCP Echo Server/: Boost Async TCP Echo Server.vcxproj  async_tcp_echo_server.cpp
Boost Blocking TCP Echo Client/: Boost Blocking TCP Echo Client.vcxproj  stdafx.cpp
Boost Blocking TCP Echo Server/: Boost Blocking TCP Echo Server.vcxproj  Boost Blocking TCP Echo Server.vcxproj.filters  stdafx.cpp
Boost Blocking UDP Echo Client/: Boost Blocking UDP Echo Client.vcxproj  blocking_udp_echo_client.cpp
Boost Blocking UDP Echo Server/: Boost Blocking UDP Echo Client Server.vcxproj  blocking_udp_echo_server.cpp
Boost CLR XElement Server/: AssemblyInfo.cpp  Boost CLR XElement Server.cpp  XmlFile.xml  stdafx.cpp
Boost Chat Client/: Boost Chat Client.cpp  Boost Chat Client.vcxproj  Boost Chat Client.vcxproj.filters  main_chat_client.cpp  stdafx.cpp  stdafx.h
Boost Chat Server/: Boost Chat Server.cpp  Boost Chat Server.vcxproj  Boost Chat Server.vcxproj.filters  chat_message.hpp  main_chat_server.cpp  stdafx.cpp  stdafx.h
Boost Circular Buffer/: Boost Circular Buffer.vcxproj  Boost Circular Buffer.vcxproj.filters  driver.cpp
Boost JSON Client/: boost_json_client.cpp  stdafx.cpp
Boost Log/: Boost Log.vcxproj  Boost Log.vcxproj.filters
Boost Normal Distribution/: Boost Normal Distribution.cpp  Boost Normal Distribution.vcxproj  Boost Normal Distribution.vcxproj.filters
Boost Signals/: Boost Signals.vcxproj  Boost Signals.vcxproj.filters  Document.cpp  boost_signals.cpp
C++11 Parallel For/: C++11 Parallel For.cpp  C++11 Parallel For.vcxproj.filters  ReadMe.txt
FormDll/: FormDll.vbproj  Form_Guest_Dll.vb
FormDll/My Project/: AssemblyInfo.vb
FormInsidePanel/: FormInsidePanel.vbproj  Form_Guest.Designer.vb  Form_Guest.vb  Form_Host.Designer.vb  Form_Host.vb
FormInsidePanel/My Project/: Application.myapp  AssemblyInfo.vb  Settings.Designer.vb
MySql Playground/: MySql Playground.cpp  connect.cpp  debug_output.hpp  dynamic_load.cpp  examples.h  exceptions.hpp  prepared_statement.cpp  prepared_statements.hpp  pthreads.cpp  resultset.cpp  resultset.hpp  resultset_binary.cpp  resultset_binary.hpp  resultset_meta.hpp  standalone_example.cpp  standalone_example.hpp  standalone_example_docs1.cpp  standalone_example_docs2.cpp  standalone_example_docs2.hpp  statement.cpp  stdafx.h
OpenCLProject1/: ImageOclApplication.cpp  ImageOclApplication.hpp  OpenCLProject1.vcxproj.filters  intel_1.cl  saxpy.cl  utils.h
OpenCV Filters/: main.cpp
OpenCvGaussianModeling/: aishack.cpp  aishack.hpp  ocvgm.cpp
Std Atomic/: Std Atomic.cpp  Std Atomic.vcxproj  Std Atomic.vcxproj.filters
Std Thread Futures Async/: Std Thread Futures Async.vcxproj  Std Thread Futures Async.vcxproj.filters
StdArrayPlayground/: StdArrayPlayground.cpp  StdArrayPlayground.vcxproj.filters  stdafx.cpp
Tbb Playground/: NumberPrinter.cpp  NumberPrinter.hpp  PseudoMadaProducer.cpp  PseudoMadaProducer.hpp  TbbPlayground.cpp  TbbPlayground.vcxproj  ThreadPoolExample.cpp
Test Circular Buffer/: Main.cpp  Test Circular Buffer.cpp  Test Circular Buffer.hpp  Test Circular Buffer.vcxproj  Test Circular Buffer.vcxproj.filters
Test Log/: Test Log.cpp  Test Log.vcxproj  Test Log.vcxproj.filters
Test Signals/: Document.hpp  Test Signals.vcxproj  Test Signals.vcxproj.filters  TextView.hpp  stdafx.cpp
VB TCP Client/: Form1.Designer.vb  Form1.vb  VB TCP Client.vbproj
VB TCP Server/: VB TCP Server.vbproj  mServer.vb
VB UDP Client/: AssemblyInfo.vb  Form1.resx  Form1.vb  VB UDP Client.vbproj
VB UDP Server/: AssemblyInfo.vb  Form1.resx  Form1.vb  Receive.sln  VB UDP Server.vbproj
Windows Serial Arduino/: ReadMe.txt  Windows Serial Arduino.vcxproj.filters
XProtocol/: XMessage.vb
XSpectra VB Asio Client/: Form1.vb  XSpectra VB Asio Client.vbproj
XSpectra VB Asio Protocol/: XSpectra VB Asio Protocol.vbproj  XSpectraMessage.vb  XmlLinqMessage.vb
XSpectra VB Asio Server/: ConnectedClient.vb  ConnectedClientCollection.vb  Form1.vb  XSpectra VB Asio Server.vbproj
XSpectraMessage/: AssemblyInfo.cpp  Stdafx.cpp  XSpectraMessage.cpp  XSpectraMessage.h  XSpectraMessage.vcxproj  XSpectraMessage.vcxproj.filters  unman_message.cpp  unman_message.hpp
cuda/: .gitignore
cuda/Prints/: .project
cxx/: assignment.cpp  atomic_winner.cpp  bitmask.cpp  byte_spec.c  copymoveperf.cpp  copyvec.cpp  for_each_in_tuples.cpp  generic_lambda.cpp  lexical_cast.cpp  map_insert_templ.cpp  mistery_ludovica.cpp  new-controller-mechanism-stub.cpp  old_thread_future_async.cpp  optional.cpp  pattern_signals.cpp  pedantic.cpp  pthreads.c  pthreads_mtx_cv.c  read_urandom_main.cpp  regex_replace.cpp  segv.cpp  sfinae.cpp  shared_mem.cpp  shared_mutexes.cpp  sleep_min.cpp  tbb-utility.h  template-variadic-add.cpp  template_array_size.cpp  timed-flush.c  traits.cpp  unions.cpp  unique_ptr.cpp  variant.cpp  visitor_pattern.cpp  words.c  write_read_float.cpp  write_vec.cpp  ws_client.cpp
cxx/xml/libxml++/: CMakeLists.txt  dom_parser.cpp  main.cpp
dotnet/: PbDotNetPlayground.sln
linux/: rlimit.c
pycpp/: .gitignore  ks_test.py  pycpp_main.cpp
pygmm/: plot_gmm_covariances.py
pyground/: CalculatorGui.py  FlexGrid.py  asyncs.py  bayesian.py  eratostene.py  example_progress.py  fit_bimodal_gaussian.py  hdd_perf.py  histograms.py  kwargs.py  mcmc_sampling.py  plot_register_translation.py  portopt-mc.py  radios.py  styling-names.html  unsupervised.py  wxground.fbp  wxmplot.py  yahoo-grabber.py  zlib.py
python/: bayesian.py
rust/bronzeage/: Cargo.toml
rustground/: .gitignore  Readme.md
rustground/mandelbrot/: Cargo.toml  demo.sh  wow.sh
rustground/mandelbrot/src/: main.rs
(+678 files in other folders)
