[package]
name = "bronzeage"
version = "0.1.0"
authors = ["Patrizio Bertoni <pbertoni@x-next.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://stackoverflow.com/questions/33025887/how-to-use-a-local-unpublished-crate
[dependencies]
pbrlib = { path = "../pbrlib" }
