[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Patrizio Bertoni <pbertoni@x-next.com>"]

# https://doc.rust-lang.org/edition-guide/editions/index.html
# edition 2021 seems unstable as of 20210913
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num = "0.1.27"
num = "0.4"
image = "0.23.12"
# crossbeam = "0.2.8"
crossbeam = "0.8"
